# qimg

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
migrations/: setup.sql
models/: README.md
skills/: README.md  SKILL.md.sample
src/qimg/: __init__.py  cli.py  collections.py  config.py  contexts.py  db.py  embedder.py  facts.py  fts.py  ids.py  indexer.py  model_download.py  model_manager.py  models.py  output_models.py  paths.py  service.py  vectors.py
src/qimg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/qimg/detector/: __init__.py  object_detector.py
src/qimg/encoder/: __init__.py  device.py  encoder.py  paths.py
src/qimg/mcp/: __init__.py  protocol.py  server_http.py  server_stdio.py
src/qimg/media/: __init__.py  exif.py  image_io.py  phash.py
src/qimg/query/: __init__.py  expand.py  keywords.py
src/qimg/rank/: __init__.py  normalize.py  rerank.py  rrf.py
src/qimg/util/: logging.py
tests/: conftest.py  test_context_inheritance.py  test_db_schema.py  test_facts_defaults.py  test_facts_provenance.py  test_fts_split_scoring.py  test_index_incremental.py  test_migration_backfill.py  test_model_download.py  test_ocr_vector_search.py  test_query_expand_fallback.py  test_query_output_schema.py  test_rrf.py
